pulseaudio (2.0-1) UNRELEASED; urgency=low

  * New upstream release (2.0)
  * debian/patches: Drop all patches, all merged upstream
  * pulseaudio: Add new modules: module-switch-on-port-available,
    module-virtual-surround-sink
  * pulseaudio: Add new manpage: man 5 pulse-cli-syntax

 -- Sjoerd Simons <sjoerd@debian.org>  Sun, 13 May 2012 15:49:51 +0200

pulseaudio (1.1-3.2) unstable; urgency=low

  * Non-maintainer upload.
  * Apply upstream patches to fix build on hurd-i386 (Closes: 573339).

 -- Samuel Thibault <sthibault@debian.org>  Wed, 25 Apr 2012 12:33:21 +0200

pulseaudio (1.1-3) unstable; urgency=low

  * Tighten dependencies for packages that uses the internal helper library
    (Closes: 651716)
  * Move libpulsecommon and libpulsedsp to a pkglib (Closes: 651717)
  * Fix svolume compilation on arm (Closes: 657117)
  * Move the alsa pulse.conf file to /usr/share/alsa/alsa.conf.d to follow the
    alsa-lib 1.0.25 changes

 -- Sjoerd Simons <sjoerd@debian.org>  Sun, 19 Feb 2012 13:54:55 +0100

pulseaudio (1.1-2) unstable; urgency=low

  * debian/libpulse0.symbols: Tighten depends for packages using the private
    libpulsecommon library (Closes: 647236)

 -- Sjoerd Simons <sjoerd@debian.org>  Fri, 25 Nov 2011 22:04:51 +0100

pulseaudio (1.1-1) unstable; urgency=low

  * New upstream bugfix release
  * debian/libpulse0.symbols: Soname of internal libpulsecommon library bumped
  * debian/control: Update standards version

 -- Sjoerd Simons <sjoerd@debian.org>  Sun, 23 Oct 2011 11:08:01 +0200

pulseaudio (1.0-4) unstable; urgency=low

  * debian/control: Don't depend on libasound2-plugins on kfreebsd
    and the hurd (Closes: #643966)

 -- Sjoerd Simons <sjoerd@debian.org>  Sat, 01 Oct 2011 13:15:54 +0100

pulseaudio (1.0-3) unstable; urgency=low

  * debian/libpulse-mainloop-glib0.symbols: Actually fix the naming...

 -- Sjoerd Simons <sjoerd@debian.org>  Thu, 29 Sep 2011 11:21:32 +0100

pulseaudio (1.0-2) unstable; urgency=low
