@@ -17,7 +17,8 @@ Build-Depends: debhelper (>= 8.1.3), cdbs, quilt, m4, dh-autoreconf,
     libtdb-dev, intltool, libgtk2.0-dev, libxtst-dev,
     libssl-dev,
     libx11-xcb-dev, libice-dev, libxcb1-dev (>= 1.6),
-    libjson0-dev, liborc-0.4-dev (>= 1:0.4.11), libfftw3-dev
+    libjson0-dev, liborc-0.4-dev (>= 1:0.4.11), libfftw3-dev,
+    libsystemd-daemon-dev [linux-any], libsystemd-login-dev [linux-any]
 Standards-Version: 3.9.2
 Vcs-Git: git://git.debian.org/git/pkg-pulseaudio/pulseaudio.git
 Vcs-Browser: http://git.debian.org/?p=pkg-pulseaudio/pulseaudio.git
