@@ -75,6 +75,7 @@ usr/lib/pulse-*/modules/module-virtual-sink.so
 usr/lib/pulse-*/modules/module-virtual-source.so
 usr/lib/pulse-*/modules/module-switch-on-port-available.so
 usr/lib/pulse-*/modules/module-virtual-surround-sink.so
+usr/lib/pulse-*/modules/module-systemd-login.so
 lib/udev/rules.d/90-pulseaudio.rules
 usr/share/locale
 usr/share/pulseaudio
