@@ -5,8 +5,9 @@ pulseaudio (2.0-1) UNRELEASED; urgency=low
   * pulseaudio: Add new modules: module-switch-on-port-available,
     module-virtual-surround-sink
   * pulseaudio: Add new manpage: man 5 pulse-cli-syntax
+  * pulseaudio: Build module-systemd-login on linux
 
- -- Sjoerd Simons <sjoerd@debian.org>  Sun, 13 May 2012 15:49:51 +0200
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 13 May 2012 15:52:42 +0200
 
 pulseaudio (1.1-3.2) unstable; urgency=low
 
